# RAGOps-Studio

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  railway.json
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: chat.py  documents.py  evaluation.py  health.py  indices.py  search.py
backend/app/core/: config.py  llm.py
backend/app/db/: elasticsearch.py
backend/app/rag/: graph.py  prompts.py  state.py
backend/app/rag/nodes/: extract_keywords.py  generate.py  retrieve.py
backend/app/schemas/: chat.py  document.py  eval.py  index.py  search.py
backend/app/services/: document_service.py  elasticsearch_service.py  embedding_service.py  eval_service.py  file_parser.py  rag_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/components/ui/: badge.tsx  select.tsx  table.tsx
frontend/src/hooks/: useHealth.ts
frontend/src/pages/: Chat.tsx  Documents.tsx  Eval.tsx  IndexDetail.tsx  Indices.tsx  Search.tsx
